# postgres

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN.md  POV.md  README.md  extensions.toml  mise.toml  rust-toolchain.toml
.github/workflows/: build-sink.yml  ci.yml  e2e.yml  release-image.yml  release-server.yml  release-sink.yml
bench/glidefs-pg/: README.md  RESULTS.md  delta.awk  exp-d2-coldfork.sh  exp-d2.sh  exp-e-fork.sh  exp-e.sh  exp-f-pgbouncer.sh  exp-multiworker.sh  exp-pooler-ceiling.sh  multiworker-real-config.sh  qemu-bringup.sh  qemu-runall.sh  run.sh
bench/glidefs-pg/conf/: a1-no-recycle.conf  baseline.conf  c1-checkpoint30.conf  c1-checkpoint60.conf  c1-cp300s.conf  c1-cp30s.conf  c1-cp45s.conf  c1-cp90s.conf  c2-flushafter-0.conf  c2-flushafter-2mb.conf  c3-aggressive.conf  c3-gentle.conf  c3-off.conf  d-maintenance-io.conf  d1-zstd.conf  e1-autovac-throttled.conf
beyond-pg-cdc/: ARCHITECTURE.md  Cargo.toml
beyond-pg-cdc/src/: decode.rs  lsn.rs  main.rs  proto.rs  resp.rs
beyond-pg-cdc/tests/: e2e.rs
beyond-pg-core/: Cargo.toml
beyond-pg-core/src/: lib.rs  mmds.rs  vsock.rs
beyond-pg-init/: ARCHITECTURE.md  Cargo.toml
beyond-pg-init/src/: bootsetup.rs  main.rs  substrate.rs  supervise.rs  volumes.rs
beyond-pg-sink/: ARCHITECTURE.md  Cargo.toml  README.md
beyond-pg-sink/src/: lib.rs  main.rs  quic_recv.rs  wal_recv.rs
beyond-pg-sink/tests/: e2e.rs
docker/: Dockerfile  initdb.sh
docker/test/: Dockerfile  stub_extension.c
packer/files/pgbouncer/: pgbouncer.ini
packer/files/postgresql/: 00-beyond.conf  hooks-readme.md  pg_hba.conf
packer/scripts/: 01-base-packages.sh  02-postgres-install.sh  03-pgdg-extensions.sh  04-beyond-extensions.sh  05-pgbouncer-install.sh  06-beyond-pg-install.sh  07-config.sh  08-mmds.sh  09-cleanup.sh  10-pgdata-template.sh  bless.sh  build-beyond-extensions.sh  post-process.sh  publish.sh
packer/templates/: postgres-rootfs.pkr.hcl
plans/: README.md  phase-0-structure.md  phase-1-supervisor.md  phase-2-image.md  phase-3-boot.md  phase-4-fork.md  phase-5-ship.md
src/: archive.rs  boot.rs  cert_watcher.rs  children.rs  config.rs  handoff_bridge.rs  init.rs  lib.rs  log_forwarder.rs  main.rs  mmds.rs  pg.rs  rpc.rs  sql.rs  supervisor.rs  template.rs  tls.rs  vsock.rs  wal_forwarder.rs
tests/: adoption_roundtrip.rs  binary.rs  boot.rs  e2e.rs  handoff_e2e.rs  handoff_protocol.rs  pgbouncer_peering.rs  pidfd_async.rs  supervisor.rs
wal-proto/: Cargo.toml
wal-proto/src/: lib.rs
