[workspace]
members = [
  ".",
  "beyond-pg-cdc",
  "beyond-pg-core",
  "beyond-pg-init",
  "beyond-pg-sink",
  "wal-proto",
]
resolver = "2"

[package]
name = "beyond-pg"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "beyond-pg"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
beyond-pg-core = { path = "./beyond-pg-core" }
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rcgen = "0.14"
rmp-serde = "1"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["rt", "io-util", "fs", "time", "signal", "sync", "process", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wal-proto = { path = "./wal-proto" }
x509-parser = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["signal", "process", "hostname"] }
tokio-vsock = "0.7"
handoff = { version = "0.1", package = "beyond-handoff" }

[dev-dependencies]
postgres = "0.19"
testcontainers-modules = { version = "0.15", features = ["blocking", "postgres"] }
