[package]
name = "beyond-pg-init"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "PID 1 init for the beyond-pg VM image. Sync only. Owns handoff::Supervisor and the vsock lifecycle listener."

[[bin]]
name = "beyond-pg-init"
path = "src/main.rs"

[dependencies]
beyond-pg-core = { path = "../beyond-pg-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
handoff = { version = "0.1", package = "beyond-handoff" }
