[package]
name = "beyond-pg-init"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "PID 1 init for the beyond-pg VM image. Sync only. Owns handoff::Supervisor and the vsock lifecycle listener."

[[bin]]
name = "beyond-pg-init"
path = "src/main.rs"

[dependencies]
beyond-pg-core = { path = "../beyond-pg-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
handoff = { version = "0.1", package = "beyond-handoff" }
# The guest-ready handshake instd waits for is a single self-described vsock
# frame; we speak it directly (see src/substrate.rs) rather than depend on the
# Beyond workspace, so this repo builds standalone in CI. The wire contract is
# pinned by a fixture test.
nix = { version = "0.31", features = ["mount"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-vsock = "0.7"
rmp-serde = "1"
