[package]
name = "beyond-pg-sink"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[lib]
name = "beyond_pg_sink"
path = "src/lib.rs"

[[bin]]
name = "beyond-pg-sink"
path = "src/main.rs"

[[bin]]
name = "wal-forwarder"
path = "src/bin/wal_forwarder.rs"

[dependencies]
bytes = "1"
mio = { version = "1", features = ["net", "os-poll"] }
quinn-proto = "0.11"
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
wal-proto = { path = "../wal-proto" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[dev-dependencies]
beyond-pg = { path = ".." }
native-tls = "0.2"
postgres = "0.19"
postgres-native-tls = "0.5"
tempfile = "3"
testcontainers-modules = { version = "0.15", features = ["blocking", "postgres"] }
